Nav styling, spacing fixes

--- a/_static/css/divio.css
+++ b/_static/css/divio.css
@@ -44,6 +44,13 @@ article ul {
     line-height: 1.6em;
 }
 
+.header-title {
+    font-family: "Teko", Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    line-height: 1.1em;
+    font-size: 1.55em;
+}
+
 .logo {
     height: 40px;
 }
@@ -261,4 +268,16 @@ article ul li {
 #contents ol li ol,
 #contents ol li ul {
     margin-top: .3em;
+}
+
+.wy-menu-vertical a {
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+}
+.wy-menu-vertical li.toctree-l2 li.toctree-l3 > a {
+    padding: .6em 20px .6em 72px;
+}
+
+#contents + .note {
+    margin-top: 3em;
 }
